// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text editor plugins.renderNode renders a line when passed 1`] = `
<Line
  attributes={
    Object {
      "dummy": "dummyData",
    }
  }
  dummy="dummyData"
  node={
    Object {
      "data": Object {
        "get": [Function],
      },
      "type": "ObojoboDraft.Chunks.Text.TextLine",
    }
  }
/>
`;

exports[`Text editor plugins.renderPlaceholder exits when not relevent 1`] = `undefined`;

exports[`Text editor plugins.renderPlaceholder exits when not relevent 2`] = `undefined`;

exports[`Text editor plugins.renderPlaceholder exits when not relevent 3`] = `undefined`;

exports[`Text editor plugins.renderPlaceholder renders a placeholder 1`] = `
<span
  className="placeholder align-left"
  contentEditable={false}
  data-placeholder="Type Your Text Here"
/>
`;

exports[`Text editor queries.createTextLinesFromText builds text lines 1`] = `
Array [
  Immutable.Record {
    "data": Immutable.Map {},
    "key": "1",
    "nodes": Immutable.List [
      Immutable.Record {
        "leaves": Immutable.List [
          Immutable.Record {
            "marks": Immutable.Set [],
            "text": "mock text",
          },
        ],
        "key": "2",
      },
    ],
    "type": "ObojoboDraft.Chunks.Text.TextLine",
  },
]
`;

exports[`Text editor renderNode calls next 1`] = `undefined`;

exports[`Text editor renderNode renders text when passed 1`] = `
<Text
  node={
    Object {
      "data": Object {
        "get": [Function],
      },
      "type": "ObojoboDraft.Chunks.Text",
    }
  }
/>
`;
